review: harden prefetch (try-scoped ThreadLocal + UUID guards) and adopt Java 21 idioms
Addresses PR #28311 review feedback:

- gitar-bot: move LineagePrefetchContext.setUpstream inside the try block
  in both bulk sinks' addEntity so the finally clear always covers it,
  even if a JVM Error fires between set and the try entry.
- Copilot: guard UUID parsing in resolveUpstreamReferences and
  mergeRecordsIntoResult with parseUuidOrNull, so a malformed fromId/toId
  is logged + skipped instead of throwing and breaking the whole batch.
  Prefetch stays best-effort; doc-build still falls back cleanly.
- Copilot: replace hardcoded UPSTREAM_ORDINAL = 13 with
  Relationship.UPSTREAM.ordinal() in SearchIndexPrefetchTest.
- Copilot: replace assertNotSame(null, bound) with assertNotNull(bound)
  in LineagePrefetchContextTest.

Also adopt Java 21 idioms across the new code and codify them in
CLAUDE.md so future work follows the same style:
- entities.getFirst() instead of entities.get(0) (SequencedCollection)
- nullOrEmpty(entities) from CommonUtil instead of
  entities != null && !entities.isEmpty()

New test: prefetchSkipsRecordsWithMalformedUuids exercises the
parseUuidOrNull guards on fromId, toId, and missing fromEntity. 69
tests pass; JaCoCo confirms 100% on every new method including
parseUuidOrNull.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>